# pyconfviewer

./: .gitignore  CONTRIBUTION.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
examples/: run_generator.py
output/: config_report.html  diff_report.html
src/pyconfviewer/: config_generator.py  config_loader.py  diff_generator.py  html_generator.py
src/pyconfviewer/templates/: config_diff_viewer.html  config_viewer.html
tests/: test_config_generator.py  test_diff_generator.py
tests/mock_configs/config_a/: file2.json  settings.ini  settings.toml
tests/mock_configs/config_b/: file1.yaml  file2.json  settings.ini  settings.toml
